--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -27,7 +27,7 @@
     /* Главная секция */
     .hero {
         min-height: 80vh;
-        padding-top: 4rem;
+        padding-top: 5rem;
     }
     
     .hero__title {
